Fixed z-index for greeter div.

--- a/batimahq.css
+++ b/batimahq.css
@@ -33,6 +33,7 @@ body {
     font-family: "Mate SC", serif;
     border: 2px solid black;
     background-color: white;
+    z-index: 1;
 }
 
 #greeter h2 {
